{
    "name": "GameInputs",
    "maps": [
        {
            "name": "BattleMap",
            "id": "b6ae9aa3-ce34-424b-a68c-2539a6e68797",
            "actions": [
                {
                    "name": "FireCommand",
                    "type": "Button",
                    "id": "cf7967f4-5b37-402d-80ae-6ea7600afd62",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap(duration=0.2,pressPoint=0.3)",
                    "initialStateCheck": true
                },
                {
                    "name": "Point",
                    "type": "PassThrough",
                    "id": "ab7846f9-648a-4905-bbff-499c127097a3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ScrollWheel",
                    "type": "PassThrough",
                    "id": "a06d0885-413d-4bd7-b391-15c51120d980",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "PassThrough",
                    "id": "37176e5b-039b-4ac9-8e08-d8bc60b6f4d1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClickDrag",
                    "type": "PassThrough",
                    "id": "70a2dce9-d8b0-4d68-b313-31efd93e11c0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.05,pressPoint=0.1)",
                    "initialStateCheck": true
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "4a010419-96f0-4901-9e95-a0835dc127ec",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SpaceBar",
                    "type": "Button",
                    "id": "ff0f9bcb-77ad-4822-bb09-62d46376c26f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightTap",
                    "type": "Button",
                    "id": "89d1388d-b657-4cb1-b2a7-9cca8c1e05b8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectShip",
                    "type": "Value",
                    "id": "d79ef1cc-64ec-4682-b23d-3a9390edab23",
                    "expectedControlType": "Key",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ScrollWheelClick",
                    "type": "Button",
                    "id": "50670dcd-401a-47d8-968a-2b1dcb0d97d2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8e742ab7-6730-4698-9d0b-493a19fb23fc",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FireCommand",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3a6fdcbc-f8f7-4123-87e8-dfbed551ab42",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aaadcd2a-6338-4d0c-a472-79695c8fa685",
                    "path": "<Pen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "da3d9c4b-c60a-4d9c-98ad-bd41118fb026",
                    "path": "<Touchscreen>/touch*/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c7aa9f24-4a08-4406-8fc9-359ef24cac58",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScrollWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ea5e94c4-5f68-4ab8-916d-4ed1b7653f20",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "43bd8f40-c4da-4210-835b-bb64755b9dbc",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClickDrag",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9511c305-3be3-447f-b25b-bdfde0baf837",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "86a46e56-609a-43ae-b0b4-f28c386d2a41",
                    "path": "Dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "d22f1c95-f6e0-4d5a-b6d4-1e45cdfdf9af",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "up",
                    "id": "b3b1fbac-be23-4525-bbc6-48adb01ec952",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "48b25534-bd70-4baa-a3a3-f224c24d938d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ecec6e45-a23a-4aaf-9d0c-e92710317aef",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "ab7ca6e3-3482-4b68-b9db-fa3362783246",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "45251a4d-e586-47f8-9497-8a5612507f86",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "06770c8e-feec-4bd8-98ad-48e24cd6eaaf",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "42a4b952-80a0-45b5-89ae-09a5cd44cce6",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a2152b4b-b056-4646-821b-b193a38b8b17",
                    "path": "<XRController>/{Primary2DAxis}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "58cb8d99-74e3-47de-9bba-efef842cd71d",
                    "path": "<Joystick>/stick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8e84b028-c8fa-4130-a261-e28acb84f711",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpaceBar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dd896fd7-bec6-426f-a1b1-35c0c5726aad",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightTap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ca2bceba-3c81-4744-84ee-e61091115f88",
                    "path": "<Keyboard>/numpad1",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "",
                    "action": "SelectShip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f797f604-6cd7-4050-9c62-ddf475c4b149",
                    "path": "<Keyboard>/numpad2",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "",
                    "action": "SelectShip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fe738fea-1e63-4bcf-aa7a-d960f6657c06",
                    "path": "<Keyboard>/numpad3",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "",
                    "action": "SelectShip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cbd9c8de-d4c2-45a6-85b6-bf6ecc89f8d6",
                    "path": "<Keyboard>/numpad4",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "",
                    "action": "SelectShip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f4cf880-ec19-4d1c-af86-0d9406d635e6",
                    "path": "<Keyboard>/numpad5",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "",
                    "action": "SelectShip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9fa15d38-87d9-4091-9626-89df579d40bc",
                    "path": "<Keyboard>/numpad6",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "",
                    "action": "SelectShip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2f17d54d-56b8-45c8-a289-182cafec77f6",
                    "path": "<Keyboard>/numpad7",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "",
                    "action": "SelectShip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fd6546eb-3fd6-4db0-b5e1-e68c9b29236f",
                    "path": "<Keyboard>/numpad8",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "",
                    "action": "SelectShip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b9a2109-3d00-48da-9d45-188012f46b6c",
                    "path": "<Keyboard>/numpad9",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "",
                    "action": "SelectShip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "131d2dd8-8ddf-43e2-b85d-37629e0689df",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScrollWheelClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GodMap",
            "id": "1af0741a-071d-485d-995a-4e91c0854197",
            "actions": [
                {
                    "name": "PassCurrentMainObjective",
                    "type": "Button",
                    "id": "f857cabc-8eb3-4ae6-b4bc-b1e6dcc98cd1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "40c8d483-ea93-4d25-ada4-14d46296af9b",
                    "path": "<Keyboard>/rightCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PassCurrentMainObjective",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": []
        }
    ]
}